# thinkctl

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  spec.md
.cursor/rules/: skills-discovery.mdc
.github/workflows/: ci.yml  deploy.yml
.kiro-cli/rules/: rust-rules.mdc
.skills/markdownlint/: SKILL.md
.skills/thinkos-content-creator/: SKILL.md
.skills/thinkos-content-creator/assets/: template.adr.md  template.coe.md  template.conf.md  template.log.md  template.postmortem.md  template.service.md
.skills/writer-voice/: SKILL.md
content/etc/thoughts/: purpose.conf.md  welcome.service.md  whoami.conf.md
content/etc/thoughts/agents/: documenting-for-ai-collaboration.service.md
content/etc/thoughts/philosophy/: sustainable-systems.conf.md
content/etc/thoughts/platform/: correction-of-errors.service.md
content/etc/thoughts/platform/docs.d/: 000-why-i-document-architecture.md  010-adrs-are-not-bureaucracy.md  020-postmortems-as-system-memory.md  030-config-as-documentation.md  040-diagrams-are-a-contract.md  050-documenting-for-ai-agents.md  060-when-not-to-document.md
public/: 404.html  CNAME  style.css  thoughts.js
src/: content_index.rs  main.rs
src/components/: footer.rs  highlights.rs  mod.rs  navbar.rs  panel.rs  section_header.rs  skills.rs  terminal.rs  terminal_ls.rs  themes.rs
src/content/: profile.rs
src/pages/: home.rs  mod.rs
src/pages/thoughts/: grep.rs  index.rs  mod.rs  post.rs  topic.rs  url.rs
src/ui/: markdown.rs  mod.rs  terminal_ls.rs  theme.rs
